--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
 <html>
-    <p>Hi there!</p>
-    <p>It works!</p>
+<head>
+	<title>My Blog</title>
+</head>
+<body>
+{% for post in posts %}
+    <div>
+        <p><b>published: {{ post.published_date }}</b></p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+</body>
 </html>
